# op-analytics

./: .cursorignore  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .sqlfluff  CLAUDE.md  Dockerfile  Dockerfile.dagster  Makefile  Pipfile  Pipfile.lock.REMOVED.git-id  README.md  Simple balance tracking.ipynb  Simple balance tracking.ipynb.REMOVED.git-id  _config.yml  docker-entrypoint.sh  format_query.py  index.html  pyproject.toml  requirements.txt  uv.lock.REMOVED.git-id
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.makemarkers/: .gitignore
attestation_generation/: retropgf_results_to_attestations.ipynb
contracts_tracking/: check_contract_gas_usage.ipynb.REMOVED.git-id  get_contract_stats.ipynb  get_contract_stats.ipynb.REMOVED.git-id  get_eoa_deployers.ipynb  get_evm_topic0.ipynb  get_projects_from_airtable.ipynb  get_runtime_bytecode_snippet.ipynb  get_tokenlist.ipynb  get_tokenlist.ipynb.REMOVED.git-id  project_usage_to_devrel.ipynb  project_usage_to_devrel.ipynb.REMOVED.git-id  readme.md  successful_deployers_to_devrel.ipynb  successful_deployers_to_devrel.ipynb.REMOVED.git-id  successful_deployers_to_devrel.py  test_get_result.ipynb
data_warehouse_uploads/: run_uploads_to_bq.ipynb  run_uploads_to_bq.ipynb.REMOVED.git-id
dbt/: dbt_project.yml  index.html  profiles.yml
developer_tracking/: successful_deployers_to_devrel.ipynb  successful_deployers_to_devrel.ipynb.REMOVED.git-id
docs/: .gitignore
helper-functions/: coingecko_utils.py  dune_utils.py  readme.md  subgraph_utils.ipynb  subgraph_utils.ipynb.REMOVED.git-id  subgraph_utils.py  subgraph_utils.py.REMOVED.git-id
helper_functions/: airtable_utils.py  cancel_dune_query.ipynb  clickhouse_utils.py  clickhouse_utils.py.REMOVED.git-id  coingecko_utils.py  csv_utils.py  defillama_utils.py  defillama_utils.py.REMOVED.git-id  defillama_utils_legacy.py  defillama_utils_legacy.py.REMOVED.git-id  defillama_utils_test.ipynb  duneapi_utils.py  duneapi_utils.py.REMOVED.git-id  ethereumetl_utils.py  evm_utils.py  flipside_utils.py  get_chain_colors.py  get_coingecko_data.ipynb  get_coingecko_data.ipynb.REMOVED.git-id  get_eth_balance_by_block.ipynb  get_op_chain_addresses_from_repo.ipynb  get_op_chain_addresses_from_repo.py  github_utils.py  goldsky_db_utils.py  google_bq_utils.py  google_bq_utils.py.REMOVED.git-id  google_oidc_utils.py  growthepieapi_test.ipynb  growthepieapi_utils.py  l2beat_utils.py  l2beat_utils.py.REMOVED.git-id  metabaseapi_utils.py  notionapi_utils.py  opstack_metadata_utils.py  os_utils.py  pandas_utils.py  readme.md  requests_utils.py  retropgf_results_to_attestations.ipynb  retropgf_results_to_attestations.ipynb.REMOVED.git-id  (+10 more)
k8s/: ingestion.yaml  load-public-bq.yaml  models-4337-backfill-01.yaml  models-4337-backfill-02.yaml  models-4337-backfill-03.yaml  models-4337-backfill-04.yaml  models-4337-backfill-pt2.yaml  models-4337-backfill.yaml  models-blockbatch.yaml  models-daily.yaml  models-fees-backfill.yaml  newchain-backfill.yaml  secret-provider.yaml  service-account.yaml
l1_base_fees/: l1_base_fee_stats.ipynb  l1_base_fee_stats.ipynb.REMOVED.git-id  l1_base_fee_stats2.ipynb
l2_chains_tracking/: pull_l2_activity.ipynb  pull_l2_activity.ipynb.REMOVED.git-id
l2_economics/: base_fee_approx_model.ipynb  build_cost_projection_model.ipynb  build_cost_projection_model.ipynb.REMOVED.git-id  pull_op_txs.ipynb  pull_op_txs.ipynb.REMOVED.git-id
misc_analysis/: cg_get_token_vwap.ipynb  check_blob_fullness.ipynb  check_tx.ipynb  check_tx.ipynb.REMOVED.git-id  defi_launch_time.ipynb  defi_launch_time.ipynb.REMOVED.git-id  fake_exponential.ipynb  get_aoc_by_token_type.ipynb  get_aoc_by_token_type.ipynb.REMOVED.git-id  get_aop_by_token_type.ipynb  get_aop_by_token_type.ipynb.REMOVED.git-id  get_dfl_volume.ipynb.REMOVED.git-id  get_eth_balance.ipynb  get_op_txs_ethereumetl.ipynb  get_op_vwap.ipynb  get_op_vwap.ipynb.REMOVED.git-id  goerli_top_contracts.sql  l1_nft_users.ipynb.REMOVED.git-id  last_synced_block.txt  pull_raw_txs_oso_bq.ipynb  pull_raw_txs_oso_bq.ipynb.REMOVED.git-id  unclaimed_withdrawals.ipynb.REMOVED.git-id  withdrawals_unclaimed.csv.REMOVED.git-id  write_data_to_dune.ipynb
op_chains_tracking/: ch_gs_uploads.ipynb  ch_gs_uploads.ipynb.REMOVED.git-id  ch_gs_uploads.py  create_superchain_data_view.ipynb  create_superchain_data_view.ipynb.REMOVED.git-id  create_superchain_data_view.py  dune_op_stack_chains_l1_data.ipynb  dune_op_stack_chains_l1_data.ipynb.REMOVED.git-id  dune_op_stack_chains_l1_data.py  dune_opchain_uploads.ipynb  dune_opchain_uploads.py  dune_ovm1_daily_data.ipynb  dune_ovm1_daily_data.ipynb.REMOVED.git-id  gcs_uploads_from_bq.ipynb  get_superchain_token_list.ipynb  get_superchain_token_list.py  l2_revenue_tracking.ipynb  l2_revenue_tracking.ipynb.REMOVED.git-id  l2_revenue_tracking.py  l2_revenue_tracking.py.REMOVED.git-id  lightweight_op_stack_aggregate_data.ipynb  mb_gs_active_devs_to_dune.ipynb  mb_gs_active_devs_to_dune.py  mb_gs_all_uploads_from_api.ipynb  mb_gs_all_uploads_from_api.ipynb.REMOVED.git-id  mb_gs_all_uploads_from_api.py  mb_gs_all_uploads_to_dune.ipynb  (+17 more)
(+2982 files in other folders)
