[project]
name = "op-analytics"
version = "20250404.2"
description = "Data analysis tools by OP Labs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clickhouse-connect>=0.8.1",
    "dagster-k8s>=0.25.7",
    "dagster>=1.9.7",
    "duckdb>=1.1.1",
    "eth-abi-lite>=3.2.0",
    "gcsfs>=2024.9.0.post1",
    "google-cloud-bigquery>=3.26.0",
    "google-cloud-storage>=2.18.2",
    "gspread>=6.1.2",
    "jinja2>=3.1.4",
    "numba>=0.60.0",
    "orjson>=3.10.11",
    "overrides>=7.7.0",
    "pandas>=2.2.3",
    "polars>=1.23.0",
    "py-markdown-table>=1.1.0",
    "pyarrow>=17.0.0",
    "pycryptodome>=3.21.0",
    "pydantic>=2.9.2",
    "pygithub>=2.5.0",
    "pyyaml>=6.0.2",
    "stamina>=24.3.0",
    "structlog>=24.4.0",
    "typer>=0.12.5",
    "urllib3>=2.2.3",
    "sugar",
    "dune-spice>=0.2.6",
    "cloud-sql-python-connector[pg8000]>=1.18.1",
]


[tool.mypy]
files = ["src/**/*.py", "tests/**/*.py"]
ignore_missing_imports = true
check_untyped_defs = true

[project.scripts]
opdata = "op_analytics.cli.main:entrypoint"

[tool.uv]
dev-dependencies = [
    "dbt-clickhouse>=1.8.4",
    "dbt-core>=1.8.7",
    "dbt-duckdb>=1.8.3",
    "eth-abi>=5.1.0",
    "ipykernel>=6.29.5",
    "mypy>=1.11.2",
    "myst-parser>=4.0.0",
    "pydata-sphinx-theme>=0.15.4",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "ruff>=0.6.7",
    "selenium>=4.25.0",
    "sphinx>=8.0.2",
    "sqlfluff>=3.2.5",
    "sphinxcontrib-typer>=0.5.0",
    "types-pyyaml>=6.0.12.20240917",
    "types-requests>=2.32.0.20241016",
    "webdriver-manager>=4.0.2",
    "matplotlib>=3.9.0",
    "plotly>=5.20.1",
    "nbformat>=4.2.0",
    "dagster-webserver>=1.9.7",
]

[tool.uv.sources]
sugar = { git = "https://github.com/velodrome-finance/sugar-sdk" }

[tool.ruff]
# Allow lines to be as long as 100.
line-length = 100

# Exclude a variety of commonly ignored directories.
exclude = [
    "demos",
    "helper_functions",
    "notebooks",
    "op_collective_economics",
    "op_chains_tracking",
    "op_governance_data",
    "other_chains_tracking",
    "reference_data",
    "rpgf",
    "value_locked_flows",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.pytest.ini_options]
filterwarnings = [
    # Ignore some google bigquery deprecation warnings
    'ignore:Type google._upb._message:',
]
addopts = "--cov=src/ --cov-report html"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/op_analytics"]

[tool.hatch.build.targets.wheel]
packages = ["src/op_analytics"]

[tool.dagster]
module_name = "op_analytics.dagster.defs"  ## name of project's Python module and where to find the definitions
code_location_name = "dev_code_location"
